# kairu-py

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.py
kairu/: __init__.py  _image_cache.py  _image_decompression.py  _sound.py  _util.py  acs_file.py  anim_controller.py  buffer.py  dialogue.py  gif_export_backend.py  structs.py
kairu/gif_export/: __init__.py  gif_export_backend.py
kairu/wx_backend/: __init__.py  _wx_util.py  agent_window.py  animation_visualizer.py  speech_bubble.py
kairu/wx_backend/chat/: __init__.py  chat.py  chat_backend.py  langchain_backend.py
